--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,55 @@
 {% extends 'base.html' %} {% block title %}Cupcake Home{% endblock %} {% block
 content %}
-<h1>Cupcakes</h1>
-{% for msg in get_flashed_messages() %}
-<p>{{ msg }}</p>
-{% endfor %}
-<ul>
-  {% for cupcake in cupcakes %}
-  <li class="flavor-type" data-id="{{ cupcake.id }}">{{ cupcake.flavor }}</li>
+<div class="container">
+  <h1>Our Cupcakes</h1>
+  {% for msg in get_flashed_messages() %}
+  <p>{{ msg }}</p>
   {% endfor %}
-</ul>
-<a href="/cupcakes/new">Add New Cupcake</a>
+  <ul id="cupcakes-list" class="list-group"></ul>
 
+  <div class="container">
+    <h3>Add A Cupcake</h3>
+    <form id="new-cupcake-form">
+      <div class="form-group row">
+        <label for="flavor" class="col-sm-2 col-form-label">Flavor</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" id="flavor" name="flavor" />
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="size" class="col-sm-2 col-form-label">Size</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" id="size" name="size" />
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="image" class="col-sm-2 col-form-label">Image</label>
+        <div class="col-sm-10">
+          <input
+            type="text"
+            class="form-control"
+            id="image"
+            name="image"
+            placeholder="enter a URL for image"
+          />
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="rating" class="col-sm-2 col-form-label">Rating</label>
+        <div class="col-sm-10">
+          <input
+            type="number"
+            class="form-control"
+            step="0.1"
+            id="rating"
+            name="rating"
+            min="0"
+            max="10"
+          />
+        </div>
+      </div>
+      <button type="submit" class="btn btn-success">Create Cupcake</button>
+    </form>
+  </div>
+</div>
 {% endblock %}
