--- a/templates/index.html
+++ b/templates/index.html
@@ -5,24 +5,24 @@ content %}
   {% for msg in get_flashed_messages() %}
   <p>{{ msg }}</p>
   {% endfor %}
-  <ul id="cupcakes-list" class="list-group"></ul>
+  <ul id="cupcakes-list" class="w-50 list-group"></ul>
 
   <div class="container">
     <h3>Add A Cupcake</h3>
-    <form id="new-cupcake-form">
-      <div class="form-group row">
+    <form id="new-cupcake-form" class="w-50">
+      <div class="form-group row mb-2">
         <label for="flavor" class="col-sm-2 col-form-label">Flavor</label>
         <div class="col-sm-10">
           <input type="text" class="form-control" id="flavor" name="flavor" />
         </div>
       </div>
-      <div class="form-group row">
+      <div class="form-group row mb-2">
         <label for="size" class="col-sm-2 col-form-label">Size</label>
         <div class="col-sm-10">
           <input type="text" class="form-control" id="size" name="size" />
         </div>
       </div>
-      <div class="form-group row">
+      <div class="form-group row mb-2">
         <label for="image" class="col-sm-2 col-form-label">Image</label>
         <div class="col-sm-10">
           <input
@@ -34,7 +34,7 @@ content %}
           />
         </div>
       </div>
-      <div class="form-group row">
+      <div class="form-group row mb-2">
         <label for="rating" class="col-sm-2 col-form-label">Rating</label>
         <div class="col-sm-10">
           <input
